# gameoflife

./: CMakeLists.txt  README.md
include/: adjacent_tiles.hpp  agent.hpp  ant.hpp  ant_controller.hpp  ant_renderer.hpp  console.hpp  controller.hpp  game_of_life.hpp  individual.hpp  renderer.hpp  tile.hpp
src/: adjacent_tiles.cpp  agent.cpp  ant.cpp  ant.hpp  ant_colony.cpp  ant_colony.hpp  ant_controller.cpp  ant_food.cpp  ant_food.hpp  ant_food_scent.cpp  ant_food_scent.hpp  ant_renderer.cpp  console.cpp  controller.cpp  controller.hpp  game_of_life.cpp  game_of_life.hpp  individual.cpp  individual.hpp  main.cpp  object.cpp  object.hpp  renderer.cpp  renderer.hpp
